--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "license": "MIT",
   "dependencies": {
     "bulma": "^0.2.3",
-    "next": "^1.0.2",
+    "next": "latest",
     "re-base": "^2.2.0",
     "re-bulma": "^0.2.1",
     "react-recaptcha": "^2.2.4",
     "sweetalert-react": "^0.4.4"
   },
   "scripts": {
-    "dev": "next"
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
   }
 }
