--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "re-bulma": "^0.2.1",
     "react-recaptcha": "^2.2.4",
     "sha3": "^1.2.0",
-    "sweetalert-react": "^0.4.4"
+    "sweetalert-react": "^0.4.4",
+    "whatwg-fetch": "^1.0.0"
   },
   "scripts": {
     "dev": "next",
