--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "next": "latest",
     "re-base": "^2.2.0",
     "re-bulma": "^0.2.1",
+    "react-icons": "^2.2.1",
     "react-recaptcha": "^2.2.4",
     "sha3": "^1.2.0",
     "sweetalert-react": "^0.4.4",
