--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-icons": "^2.2.1",
     "react-recaptcha": "^2.2.4",
     "sha3": "^1.2.0",
-    "whatwg-fetch": "^1.0.0"
+    "whatwg-fetch": "^1.0.0",
+    "react-intercom": "latest"
   },
   "scripts": {
     "dev": "next",
